moved update.yaml file

--- a/notebooks/agent.ipynb
+++ b/notebooks/agent.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 170,
+      "execution_count": 55,
       "id": "iFhZJXOVDowy",
       "metadata": {
         "colab": {
@@ -24,7 +24,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "cKxzjtkEbyv0",
       "metadata": {
         "id": "cKxzjtkEbyv0"
@@ -36,7 +36,6 @@
         "from langgraph.checkpoint.memory import MemorySaver\n",
         "from langgraph.prebuilt import create_react_agent\n",
         "from langchain_core.tools import tool\n",
-        "from langchain.agents import load_tools\n",
         "\n",
         "import os\n",
         "import urllib, urllib.request\n",
@@ -50,7 +49,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 57,
       "id": "EDWFaw1QfkO5",
       "metadata": {
         "id": "EDWFaw1QfkO5"
@@ -63,7 +62,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 58,
       "id": "1f1762bf",
       "metadata": {},
       "outputs": [],
@@ -73,13 +72,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": null,
       "id": "ba05fc6b",
       "metadata": {},
       "outputs": [],
       "source": [
         "# @tool\n",
-        "def check_history(obj, filename='test.json'):\n",
+        "def check_history(obj, filename='records.json'):\n",
         "    \"\"\"Write DAS paper information to output file if not already in history.\"\"\"\n",
         "    # Create history set for efficient lookup\n",
         "    history = set()\n",
@@ -106,13 +105,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": null,
       "id": "78ddfd7d",
       "metadata": {},
       "outputs": [],
       "source": [
         "@tool\n",
-        "def write(obj, filename='test.json'):\n",
+        "def write(obj, filename='records.json'):\n",
         "    \"\"\"Write DAS paper information to output file for records.\"\"\"\n",
         "    # Filepath where we will store found papers' information.\n",
         "    path = '/Users/salblanco/Desktop/das/das_proj/'\n",
@@ -237,7 +236,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": null,
       "id": "3a8a6d11",
       "metadata": {},
       "outputs": [],
@@ -245,17 +244,46 @@
         "# Starting index for search\n",
         "index = 0\n",
         "# Number of papers retrieved\n",
-        "papers_per_call = 5"
+        "papers_per_call = 20"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
-      "id": "d3ddeddc",
+      "execution_count": null,
+      "id": "0d39a139",
       "metadata": {},
       "outputs": [],
       "source": [
-        "index = 0"
+        "print(os.chdir)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 61,
+      "id": "4a66daeb",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "path = '/Users/salblanco/Desktop/das/das_proj/notebooks/'"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 62,
+      "id": "a9f2c0ac",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "0\n"
+          ]
+        }
+      ],
+      "source": [
+        "with open(path+'tmp.json', 'r') as f:\n",
+        "    print(len(f.readlines()))"
       ]
     },
     {
@@ -434,14 +462,6 @@
         "    if match:\n",
         "        index = int(match.group(1))  # Extract and convert to integer\n"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "9fbcbce9",
-      "metadata": {},
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
